--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,4 +1,13 @@
 ul {
   display: flex;
   justify-content: space-between;
+  text-decoration: none;
+  list-style: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
+
+.nav-container {
+  width: 30vw;
+  margin: 0 auto 1rem auto;
 }
