wip footer lists

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,7 @@
 #header-highlight {
   background-color: yellow;
   color: black;
-  font-family: "Alegreya SC", serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 #header-text {
   margin-top: 2rem;
