--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+SC:ital@1&display=swap");
 
-.ul-nav {
+#ul-nav {
   display: flex;
   justify-content: space-between;
-
   list-style: none;
+  text-decoration: none;
   font-family: Arial, Helvetica, sans-serif;
 }
 
