added other projects page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
   background-color: black;
 }
 #header-highlight {
-  background-color: yellow;
+  /* background-color: yellow; */
   color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
