--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,18 +8,15 @@
   left: 0;
   right: 0;
   bottom: 0;
+  margin-bottom: 1rem;
 }
 
-.list-block {
+.list-block ul {
   list-style: none;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
-#footer li:hover {
-  text-decoration: underline;
-}
 .container-footer {
-  padding: 2rem 4rem;
+  padding: 1rem 2rem;
   text-align: left;
   display: flex;
   justify-content: space-between;
@@ -28,6 +25,7 @@
 .list-title {
   font-weight: bold;
   font-size: larger;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .socials-container {
@@ -44,5 +42,7 @@
   font-size: smaller;
 }
 .list-block {
-  width: 20%;
+  width: 13rem;
+  min-width: 5rem;
+  overflow: hidden;
 }
